[package]
name = "PA_Final_GiacaloneJP"
version = "0.1.0"
authors = ["root"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.26.0"
icmp = "0.3.0"
structopt = "0.3.20"
libc = "0.2.51"
net ="0.1.0"
time="0.2.23"