[package]
name = "tmp_scnn"
version = "0.1.0"
authors = ["Juan Pablo Giacalone <juanpablogiacalone8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "scnn_perf.rs"

[dependencies]
walkdir = "2.3.1"
home = "0.5.3"
dirs = "2.0.2"
structopt = "0.3.13"
clap = "2.29"
text_io = "0.1.8"